Changed up navbar

--- a/index.html
+++ b/index.html
@@ -1,31 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="http://www.w3schools.com/lib/w3.css">
     <link rel="stylesheet" type="text/css" href="css/navbar.css">
     <link rel="stylesheet" type="text/css" href="css/layout.css">
 </head>
 <body>
-    <div class="nav-container">
+<div class="nav-container">
         <ul class="navbar">
           <li><a href="#home">Home</a></li>
           <li><a href="#news">News</a></li>
           <li class="dropdown">
-            <a href="#" class="dropbtn">Dropdown</a>
-            <div class="dropdown-content">
+          <!--   <a href="#" class="dropbtn">Dropdown</a>
+           <div class="dropdown-content">
               <a href="#">Link 1</a>
               <a href="#">Link 2</a>
-              <a href="#">Link 3</a>
+              <a href="#">Link 3</a> -->
             </div>
           </li>
         </ul>
     </div>
-    <div class="side-container">
-        <div class="content-container">
-            <div class="welcome-message">
-                <h1> Welcome to my website!</h1>
-                <p>My name is Jens, and I'm a 14 years old high school student from the Netherlands.</p>
-            </div>
-        </div>
+    <div class="sidebar">
+
     </div>
 </body>
 </html>
